feat: database creation and seed + useful commands

--- a/package.json
+++ b/package.json
@@ -2,13 +2,23 @@
   "name": "@mashgin-take-home-gustavo/source",
   "version": "0.0.0",
   "license": "MIT",
-  "scripts": {},
+  "scripts": {
+    "serve:app": "nx serve mashgin-web-app",
+    "serve:services": "nx serve mashgin-services",
+    "database": "nx run database:prisma",
+    "database:up": "nx run database:compose",
+    "database:create-migration": "nx run database:create-migration",
+    "database:generate": "nx run database:generate",
+    "database:migrate": "nx run database:migrate && pnpm database:generate",
+    "database:push": "nx run database:push && pnpm database:generate"
+  },
   "private": true,
   "dependencies": {
     "@nestjs/common": "^10.0.2",
     "@nestjs/core": "^10.0.2",
     "@nestjs/platform-express": "^10.0.2",
     "@nx/next": "16.7.4",
+    "@prisma/client": "^5.2.0",
     "axios": "^1.0.0",
     "next": "13.4.1",
     "react": "18.2.0",
@@ -49,6 +59,7 @@
     "jest-environment-node": "^29.4.1",
     "nx": "16.7.4",
     "prettier": "^2.6.2",
+    "prisma": "^5.2.0",
     "sass": "1.62.1",
     "ts-jest": "^29.1.0",
     "ts-node": "10.9.1",
