--- a/package.json
+++ b/package.json
@@ -21,12 +21,14 @@
     "@nx/next": "16.7.4",
     "@prisma/client": "^5.2.0",
     "axios": "^1.0.0",
+    "date-fns": "^2.30.0",
     "next": "13.4.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.0",
-    "tslib": "^2.3.0"
+    "tslib": "^2.3.0",
+    "zod": "^3.22.2"
   },
   "devDependencies": {
     "@nestjs/schematics": "^10.0.1",
