--- a/apps/mashgin-web-app/project.json
+++ b/apps/mashgin-web-app/project.json
@@ -9,7 +9,8 @@
       "outputs": ["{options.outputPath}"],
       "defaultConfiguration": "production",
       "options": {
-        "outputPath": "dist/apps/mashgin-web-app"
+        "outputPath": "dist/apps/mashgin-web-app",
+        "postcssConfig": "apps/mashgin-web-app/postcss.config.js"
       },
       "configurations": {
         "development": {
