--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "@types/react-dom": "18.2.6",
     "@typescript-eslint/eslint-plugin": "^5.60.1",
     "@typescript-eslint/parser": "^5.60.1",
+    "autoprefixer": "^10.4.15",
     "babel-jest": "^29.4.1",
     "eslint": "~8.46.0",
     "eslint-config-next": "13.4.1",
@@ -61,9 +62,11 @@
     "jest-environment-jsdom": "^29.4.1",
     "jest-environment-node": "^29.4.1",
     "nx": "16.7.4",
+    "postcss": "^8.4.28",
     "prettier": "^2.6.2",
     "prisma": "^5.2.0",
     "sass": "1.62.1",
+    "tailwindcss": "^3.3.3",
     "ts-jest": "^29.1.0",
     "ts-node": "10.9.1",
     "typescript": "~5.1.3"
