--- a/package.json
+++ b/package.json
@@ -20,11 +20,17 @@
     "@nestjs/platform-express": "^10.0.2",
     "@nx/next": "16.7.4",
     "@prisma/client": "^5.2.0",
-    "axios": "^1.0.0",
+    "@radix-ui/react-label": "^2.0.2",
+    "@radix-ui/react-slot": "^1.0.2",
+    "axios": "^1.5.0",
+    "class-variance-authority": "^0.7.0",
+    "classnames": "^2.3.2",
     "date-fns": "^2.30.0",
     "next": "13.4.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-hook-form": "^7.45.4",
+    "react-icons": "^4.10.1",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.0",
     "tslib": "^2.3.0",
@@ -66,6 +72,7 @@
     "prettier": "^2.6.2",
     "prisma": "^5.2.0",
     "sass": "1.62.1",
+    "shadcn-ui": "^0.3.0",
     "tailwindcss": "^3.3.3",
     "ts-jest": "^29.1.0",
     "ts-node": "10.9.1",
