--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.0",
     "tslib": "^2.3.0",
+    "use-local-storage": "^3.0.0",
     "zod": "^3.22.2"
   },
   "devDependencies": {
